# githubactions

./: README.md  pyproject.toml
.github/workflows/: build.yml
docs/source/: conf.py  example.rst  index.rst  install.rst
modeltools/: preprocessing.py
tests/: test_preprocessing.py
