[tool.poetry]
name = "modeltools"
version = "0.2.21"
description = ""
authors = ["daleman"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"


[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pandas = "^1.5.0"
Sphinx = "^5.2.3"
black = "^22.10.0"
pylint = "^2.15.4"
pre = "^1.3.0"
commit = "^0.1.0"
pre-commit = "^2.20.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"